Fix alignment bug

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -61,6 +61,7 @@
 
 body {
   width: 100vw;
+  font-family: sans-serif;
 }
 
 @media only screen and (min-width: 1024px) {
